fix detail on mobile device

--- a/scss/tarot-tchat.scss
+++ b/scss/tarot-tchat.scss
@@ -522,6 +522,9 @@ footer {
 
 // MQ
 @media screen and (max-width: 900px) {
+   a.btn {
+    margin-left:0px;
+   }
   .question {
     font-size: 1.6rem;
     text-shadow: 0px 0px 1px #3c3c3c;
